<resources>

    //Navigation string
    <string name="menu">Меню</string>
    <string name="create_solution">Создать</string>
    <string name="categories">Категории</string>
    <string name="settings">Настройки</string>
    <string name="error">Сообщение об ошибке</string>
    <string name="exit">Выйти</string>

    <string name="field_must_be_not_null">Заполните поле</string>
    <string name="invalid_name">Имя должно содержать больше 3 символов</string>
    <string name="invalid_email">Некорректный email</string>
    <string name="invalid_pass">Пароль должен содержать больше 5 символов</string>

    <string name="app_name">Answerer</string>
    <string name="email">Email</string>
    <string name="pass">Пароль</string>
    <string name="name">Имя</string>
    <string name="login">Авторизоваться</string>
    <string name="forgot_pass">Забыли пароль?</string>
    <string name="no_acc_create">Нет аккаунта? Создайте здесь</string>
    <string name="acc_create">Создание аккаута</string>
    <string name="have_acc">Уже зарегистрированы? Авторизуйтесь здесь</string>
    <string name="reg">Зарегистрироваться</string>


    <string name="have_not_acc">Нет аккаунта? Зарегистрируйтесь здесь</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
