<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_categories_black_24dp"
            android:title="@string/categories"/>
        <item
            android:id="@+id/nav_create"
            android:icon="@drawable/ic_create_black_24dp"
            android:title="@string/my_solution"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_error"
            android:icon="@drawable/ic_bug_report_black_24dp"
            android:title="@string/error"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/exit"/>
    </group>
</menu>